Nov 12, 2005: <l-n@users.sourceforge.net>
- clean up code duplication in pref.c

Nov 01, 2005: <l-n@users.sourceforge.net>
- add gslist Q4 master
- initial Warsow support, partially broken

Oct 27, 2005: <l-n@users.sourceforge.net>
- unescape Q4 clan tags (thanks Gonzalo Nemmi for reporting)

Oct 26, 2005: <l-n@users.sourceforge.net>
- make "Show only configured games" button reappear
- require qstat 2.10

Oct 23, 2005: <l-n@users.sourceforge.net>
- fix Q4 rcon
- change Q4 main mod to q4base
- set rcon password correctly when launching Q4
- version 1.0.4.1

Oct 20, 2005: <l-n@users.sourceforge.net>
- release 1.0.4

Oct 18, 2005: <l-n@users.sourceforge.net>
- use Q4 clan name if it exists

Oct 17, 2005: <l-n@users.sourceforge.net>
- add x86_64 to statistics page
- fix Q4 master server protocol prefs

Oct 09, 2005: <l-n@users.sourceforge.net>
- update NEWS
- show anti-cheat icon for Doom3 and Quake4 (thanks Timothee Besset for
  reporting)
- try to support Quake4 map previews

Oct 07, 2005: <l-n@users.sourceforge.net>
- initial Quake4 support (thanks to Timothee Besset for providing
  the necessary info)

Sep 20, 2005: Jordi Mallach <jordi@sindominio.net>
- update Catalan transaltion

Sep 13, 2005: <l-n@users.sourceforge.net>
- get rid of libtool
- set version to 1.0.3.1
- another attempt to finally fix gensyms.pl

Sep 12, 2005: <l-n@users.sourceforge.net>
- fix integer overflow in TGA loader

Sep 09, 2005: <l-n@users.sourceforge.net>
- fix some typos in German translation

Sep 07, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- docu update and master server cleanup by Steffen Pankratz

Aug 23, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- fix redial dialog not honoring private clients (reported by Julien
  Langer)

Aug 20, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- fix gamespy and descent exec functions (reported by Steffen
  Pankratz)

Aug 14, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- fix saving of server filters (reported by Steffen Pankratz)
