@@ -839,6 +839,8 @@ struct game games[] = {
     arch_identifier     : "version",
     identify_cpu        : identify_cpu,
     identify_os         : identify_os,
+    prefs_load          : q3_prefs_load_common,
+    update_prefs        : q3_update_prefs_common,
     default_home        : "~/.nexuiz",
     main_mod            : stringlist039,
     command             : stringlist040,
@@ -861,10 +863,16 @@ struct game games[] = {
     exec_client         : q3_exec,
     custom_cfgs         : quake_custom_cfgs,
     save_info           : quake_save_info,
+    init_maps           : q3_init_maps,
+    has_map             : quake_has_map,
+    get_mapshot         : q3_get_mapshot,
     arch_identifier     : "version",
     identify_cpu        : identify_cpu,
     identify_os         : identify_os,
+    prefs_load          : q3_prefs_load_common,
+    update_prefs        : q3_update_prefs_common,
     default_home        : "~/.warsow",
+    pd                  : &warsow_private,
     main_mod            : stringlist041,
     command             : stringlist042,
   },
